# emulandice

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
src/emulandice/: AssignFP.py  __init__.py  cli.py  emulandice_AIS_fit.py  emulandice_AIS_postprocess.py  emulandice_AIS_project.py  emulandice_GrIS_fit.py  emulandice_GrIS_postprocess.py  emulandice_GrIS_project.py  emulandice_glaciers_fit.py  emulandice_glaciers_postprocess.py  emulandice_glaciers_project.py  emulandice_preprocess.py  io.py  r_helper.py
