[project]
name = "emulandice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brewster Malevich", email = "bmalevich@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "netcdf4>=1.7.2",
    "numpy>=2.2.6",
    "scipy>=1.16.1",
    "xarray[accel,parallel]>=2025.7.1",
]

[project.scripts]
emulandice = "emulandice:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
